...
              }
            }
          }
        }
      }
    },
    "Add" : {

    },
    "Add Another" : {

    },
    "Add Container" : {

    },
    "Add Item" : {

    },
    "Add Item Here" : {
...
    "Add Spot" : {

    },
    "Add Spots" : {

    },
    "Add a Room" : {

    },
    "Add a Warranty" : {

    },
    "Add a few things and Nook will tell you where they are." : {
...
    "Add barcode" : {

    },
    "Add brand" : {

    },
    "Add container" : {

    },
    "Add date" : {

    },
    "Add item" : {
...
    "Add the spots in this room, like shelves, drawers and cupboards." : {

    },
    "Add who has it." : {

    },
    "Add your own" : {

    },
    "Add “%@” as an Item" : {

    },
    "Added" : {

    },
    "All rooms" : {

    },
    "Also matching" : {
...
    "Date" : {

    },
    "Date %@" : {

    },
    "Delete" : {

    },
    "Delete %@ now?" : {

    },
    "Delete %@?" : {
...
    "Delete Now" : {

    },
    "Delete Photo" : {

    },
    "Delete Room" : {

    },
    "Delete Spot" : {

    },
    "Deleted %@." : {
...
    "Filters" : {

    },
    "Find" : {

    },
    "Found It Here Instead" : {

    },
    "Found here by you" : {

    },
    "Found in %@." : {

    },
    "From %@" : {

    },
    "Get Started" : {

    },
    "Give it a name." : {

    },
    "Here now" : {
...
    "Hide Values" : {

    },
    "Hide values by default" : {

    },
    "Home" : {

    },
    "In the room" : {

    },
    "In this room" : {
...
    "Line up the barcode inside the frame." : {

    },
    "Loan reminders" : {

    },
    "Location history" : {

    },
    "Mark Not Private" : {

    },
    "Mark Private" : {
...
    "Model" : {

    },
    "More for %@" : {

    },
    "Move" : {

    },
    "Move %@" : {

    },
    "Move %lld Items" : {

    },
    "Move Container" : {

    },
    "Move Down" : {

    },
    "Move Items to %@" : {
...
        }
      }
    },
    "Moved by scanning a label" : {

    },
    "Moved by you" : {

    },
    "Moved to %@." : {

    },
    "Moved with Siri" : {

    },
    "Name" : {

    },
    "Name suggestions" : {

    },
    "New Category…" : {
...
    "Receipt photo" : {

    },
    "Receipt, page %lld" : {

    },
    "Recent" : {

    },
    "Recently Deleted" : {

    },
    "Recently added" : {
...
    "Retake" : {

    },
    "Room" : {

    },
    "Room name" : {

    },
    "Rooms" : {

    },
    "Rooms and spots" : {
...
    "Rose" : {

    },
    "Sage" : {

    },
    "Save" : {

    },
    "Save Receipt" : {

    },
    "Save Search" : {
...
    "See All" : {

    },
    "See all warranties" : {

    },
    "Select" : {

    },
    "Select All" : {

    },
    "Serial" : {
...
    "Something you lent %@ is overdue." : {

    },
    "Spot" : {

    },
    "Spot name" : {

    },
    "Spot photo: %@" : {

    },
    "Spots" : {
...
    "Stone" : {

    },
    "Store" : {

    },
    "Studio" : {

    },
    "Suggested move, confirmed by you" : {

    },
    "Symbol" : {
...
    "Where" : {

    },
    "Where are these?" : {

    },
    "Where did you find it?" : {

    },
    "Where is it?" : {

    },
    "Where you bought it" : {
...
